fix(site-header): fix alignment - INNO-1272

--- a/src/systems/eu/implementations/vanilla/packages/eu-component-site-header/eu-component-site-header.scss
+++ b/src/systems/eu/implementations/vanilla/packages/eu-component-site-header/eu-component-site-header.scss
@@ -21,12 +21,25 @@
     flex-direction: column;
     padding-bottom: $ecl-spacing-m;
     padding-top: $ecl-spacing-l;
+
+    @include ecl-media-breakpoint-up('lg') {
+      align-items: flex-end;
+      flex-direction: row;
+      justify-content: space-between;
+      padding-bottom: $ecl-spacing-xl;
+      padding-top: $ecl-spacing-xl;
+    }
   }
 
   .ecl-site-header__banner {
+    align-items: flex-end;
     display: flex;
     flex-grow: 1;
     justify-content: space-between;
+
+    @include ecl-media-breakpoint-up('lg') {
+      padding-right: $ecl-spacing-xl;
+    }
   }
 
   .ecl-site-header__logo-image {
@@ -35,7 +48,7 @@
     margin: 0;
     width: 14.625rem;
 
-    @include ecl-media-breakpoint-up(sm) {
+    @include ecl-media-breakpoint-up('sm') {
       height: 3.5rem;
       width: 20.5rem;
     }
@@ -44,6 +57,10 @@
   .ecl-site-header__selector {
     align-items: center;
     display: flex;
+
+    @include ecl-media-breakpoint-up('lg') {
+      min-height: 2.75rem;
+    }
   }
 
   .ecl-site-header__selector .ecl-link {
@@ -79,24 +96,9 @@
 
   .ecl-site-header__search {
     margin-top: $ecl-spacing-m;
-  }
 
-  /* stylelint-disable-next-line order/order */
-  @include ecl-media-breakpoint-up('lg') {
-    .ecl-site-header__container {
-      align-items: center;
-      flex-direction: row;
-      justify-content: space-between;
-      padding-bottom: $ecl-spacing-xl;
-      padding-top: $ecl-spacing-xl;
-    }
-
-    .ecl-site-header__search {
+    @include ecl-media-breakpoint-up('lg') {
       margin-top: 0;
-    }
-
-    .ecl-site-header__banner {
-      padding-right: $ecl-spacing-xl;
     }
   }
 }
